Adjust the loading of the DataTables translation, to make it possible to change DataTables strings for all locales, but still don't load the default "en_US" strings, as they are included as the default already

--- a/i18n/datatables/warning.txt
+++ b/i18n/datatables/warning.txt
@@ -3,23 +3,21 @@ ATTENTION:
 Do not edit or modify the files in this directory, as they might be changed in future plugin versions.
 This would lead to a loss of your changes!
 
-* If you want to make changes to your language's file, please copy the file to another location on your server,
-for example the "languages" folder in the directory "wp-content".
-The URL of that file will then be something like http://[SITEURL]/wp-content/languages/lang-XX_XX.js.
-You can then use the plugin filter 'tablepress_datatables_language_file_url' to overwrite the passed URL
-with the new one from above.
+* If you want to make changes to your language's file, please see the TablePress Extension
+"Change DataTables strings" at http://tablepress.org/extensions/change-datatables-strings/
+for instructions on how to do this.
 
 * If you just want to change to a different language file, you can override the locale by using the Shortcode
 parameter "datatables_locale" or with the plugin filter hook 'tablepress_datatables_locale'.
 
-* If you want to translate the language file into your own language, copy the file "lang-default.js", rename the copy to
+* If you want to translate the language file into your own language, copy the file "lang-en_US.js", rename the copy to
 "lang-XX_XX.js", where XX_XX is the ISO code for your language. That is the same one as in your WordPress language files (*.po, *.mo).
 Then you can translate that file. If you email the file to me, I'll gladly include it to the next release of the plugin.
 
 Most languages in the folder are from http://datatables.net/plug-ins/i18n.
 You can also check that page, if your language has been added and tell me about it.
 
-You can find example code for this in the FAQ or the documentation at http://tablepress.org/faq/
-or http://tablepress.org/documentation/
+You can find example code for this in the FAQ at http://tablepress.org/faq/
+or in the documentation at http://tablepress.org/documentation/.
 
 Thank you!
