--- a/i18n/datatables/lang-fr_FR.json
+++ b/i18n/datatables/lang-fr_FR.json
@@ -1,17 +1,17 @@
 {
 	"sProcessing":	   "Traitement en cours...",
-	"sLengthMenu":	   "Afficher _MENU_ &eacute;l&eacute;ments",
-	"sZeroRecords":	   "Aucun &eacute;l&eacute;ment &agrave; afficher",
-	"sInfo":		   "Affichage de l'&eacute;lement _START_ &agrave; _END_ sur _TOTAL_ &eacute;l&eacute;ments",
-	"sInfoEmpty":	   "Affichage de l'&eacute;lement 0 &agrave; 0 sur 0 &eacute;l&eacute;ments",
-	"sInfoFiltered":   "(filtr&eacute; de _MAX_ &eacute;l&eacute;ments au total)",
+	"sLengthMenu":	   "Afficher _MENU_ éléments",
+	"sZeroRecords":	   "Aucun élément à afficher",
+	"sInfo":		   "Affichage de l'élement _START_ à _END_ sur _TOTAL_ éléments",
+	"sInfoEmpty":	   "Affichage de l'élement 0 à 0 sur 0 éléments",
+	"sInfoFiltered":   "(filtré de _MAX_ éléments au total)",
 	"sInfoPostFix":	   "",
-	"sSearch":		   "Rechercher&nbsp;:",
+	"sSearch":		   "Rechercher:",
 	"sLoadingRecords": "Téléchargement...",
 	"oPaginate": {
-		"sFirst":	 "Premier",
-		"sPrevious": "Pr&eacute;c&eacute;dent",
-		"sNext":	 "Suivant",
-		"sLast":	 "Dernier"
+		"sFirst":	   "Premier",
+		"sPrevious":   "Précédent",
+		"sNext":	   "Suivant",
+		"sLast":	   "Dernier"
 	}
 }
