--- a/i18n/tablepress-sr_RS.po
+++ b/i18n/tablepress-sr_RS.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: TablePress v1.3\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/tablepress\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: 2013-12-11 20:55:36+00:00\n"
 "PO-Revision-Date: 2014-02-12 19:06+0100\n"
 "Last-Translator: Tobias Bäthge <wordpress@tobias.baethge.com>\n"
