Change a string to have it match WP Core standards, and also update all languages' *.po files to take some work from translators (but without regenerating the *.mo files).

--- a/i18n/tablepress-de_DE.po
+++ b/i18n/tablepress-de_DE.po
@@ -2197,8 +2197,8 @@ msgstr "zu ersetzende bzw. zu erweiternde Tabelle"
 
 # @ tablepress
 #: views/view-import.php:198
-msgid "Select:"
-msgstr "Auswahl:"
+msgid "&mdash; Select &mdash;"
+msgstr "&mdash; Auswahl &mdash;"
 
 # @ tablepress
 #: views/view-import.php:218
