--- a/i18n/tablepress-cs_CZ.po
+++ b/i18n/tablepress-cs_CZ.po
@@ -1966,8 +1966,8 @@ msgstr "Nahradit tabulku nebo připojit k"
 
 # @ tablepress
 #: views/view-import.php:184
-msgid "Select:"
-msgstr "Vyberte:"
+msgid "&mdash; Select &mdash;"
+msgstr "&mdash; Vyberte &mdash;"
 
 # @ tablepress
 #: views/view-import.php:201
