--- a/i18n/tablepress.pot
+++ b/i18n/tablepress.pot
@@ -13,7 +13,7 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
 #: classes/class-admin-page-helper.php:79
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
 msgstr ""
 
 #: classes/class-admin-page-helper.php:80
@@ -2174,7 +2174,7 @@ msgid "Proceed without saving &#8220;Custom CSS&#8221; to a file"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://tablepress.org/"
+msgid "https://tablepress.org/"
 msgstr ""
 
 #. Description of the plugin/theme
