--- a/i18n/tablepress-fr_FR.po
+++ b/i18n/tablepress-fr_FR.po
@@ -21,8 +21,8 @@ msgstr ""
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:79
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
-msgstr "Merci d'utiliser <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
+msgstr "Merci d'utiliser <a href=\"https://tablepress.org/\">TablePress</a>."
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:80
@@ -349,8 +349,8 @@ msgstr "Copie de %s"
 # @ tablepress
 #. translators: plugin header field 'PluginURI'
 #: tablepress.php:0
-msgid "http://tablepress.org/"
-msgstr "http://tablepress.org/"
+msgid "https://tablepress.org/"
+msgstr "https://tablepress.org/"
 
 # @ tablepress
 #. translators: plugin header field 'Description'
