--- a/i18n/tablepress-he_IL.po
+++ b/i18n/tablepress-he_IL.po
@@ -20,8 +20,8 @@ msgstr ""
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:78
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
-msgstr "תודה שהשתמשת ב <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
+msgstr "תודה שהשתמשת ב <a href=\"https://tablepress.org/\">TablePress</a>."
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:79
