--- a/i18n/tablepress-is_IS.po
+++ b/i18n/tablepress-is_IS.po
@@ -22,8 +22,8 @@ msgstr ""
 
 #: classes/class-admin-page-helper.php:78
 #@ tablepress
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
-msgstr "Takk fyrir að nota <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
+msgstr "Takk fyrir að nota <a href=\"https://tablepress.org/\">TablePress</a>."
 
 #: classes/class-admin-page-helper.php:79
 #, php-format
@@ -464,8 +464,8 @@ msgstr "Afrit af %s"
 #. translators: plugin header field 'PluginURI'
 #: tablepress.php:0
 #@ tablepress
-msgid "http://tablepress.org/"
-msgstr "http://tablepress.org/"
+msgid "https://tablepress.org/"
+msgstr "https://tablepress.org/"
 
 #. translators: plugin header field 'Description'
 #: tablepress.php:0
