--- a/i18n/tablepress-pt_BR.po
+++ b/i18n/tablepress-pt_BR.po
@@ -22,8 +22,8 @@ msgstr ""
 
 #: classes/class-admin-page-helper.php:79
 #@ tablepress
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
-msgstr "Obrigado por utilizar <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
+msgstr "Obrigado por utilizar <a href=\"https://tablepress.org/\">TablePress</a>."
 
 #: classes/class-admin-page-helper.php:80
 #, php-format
@@ -355,8 +355,8 @@ msgstr "Cópia de %s"
 #. translators: plugin header field 'PluginURI'
 #: tablepress.php:0
 #@ tablepress
-msgid "http://tablepress.org/"
-msgstr "http://tablepress.org/"
+msgid "https://tablepress.org/"
+msgstr "https://tablepress.org/"
 
 #. translators: plugin header field 'Description'
 #: tablepress.php:0
