--- a/i18n/tablepress-sk_SK.po
+++ b/i18n/tablepress-sk_SK.po
@@ -20,9 +20,9 @@ msgstr ""
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:79
-msgid "Thank you for using <a href=\"http://tablepress.org/\">TablePress</a>."
+msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
 msgstr ""
-"Ďakujeme za používanie <a href=\"http://tablepress.org/\">TablePress</a>."
+"Ďakujeme za používanie <a href=\"https://tablepress.org/\">TablePress</a>."
 
 # @ tablepress
 #: classes/class-admin-page-helper.php:80
@@ -2794,8 +2794,8 @@ msgstr ""
 "náhľade!"
 
 #. Plugin URI of the plugin/theme
-msgid "http://tablepress.org/"
-msgstr "http://tablepress.org/"
+msgid "https://tablepress.org/"
+msgstr "https://tablepress.org/"
 
 #. Description of the plugin/theme
 msgid ""
