--- a/i18n/datatables/lang-ga_IR.json
+++ b/i18n/datatables/lang-ga_IR.json
@@ -1,16 +1,16 @@
 {
-	"sProcessing":	 "Próiseáil...",
-	"sLengthMenu":	 "Taispeáin iontrálacha _MENU_",
-	"sZeroRecords":	 "Gan aon taifead meaitseáil aimsithe",
-	"sInfo":		 "_START_ Showing a _END_ na n-iontrálacha _TOTAL_",
-	"sInfoEmpty":	 "Showing 0-0 na n-iontrálacha 0",
-	"sInfoFiltered": "(scagtha ó _MAX_ iontrálacha iomlán)",
-	"sInfoPostFix":	 "",
-	"sSearch":		 "Cuardaigh:",
-	"oPaginate": {
-		"sFirst":	 "An Chéad",
-		"sPrevious": "Roimhe Seo",
-		"sNext":	 "Ar Aghaidh",
-		"sLast":	 "Last"
+	"info":			"_START_ Showing a _END_ na n-iontrálacha _TOTAL_",
+	"infoEmpty":	"Showing 0-0 na n-iontrálacha 0",
+	"infoFiltered":	"(scagtha ó _MAX_ iontrálacha iomlán)",
+	"infoPostFix":	"",
+	"lengthMenu":	"Taispeáin iontrálacha _MENU_",
+	"processing":	"Próiseáil...",
+	"search":		"Cuardaigh:",
+	"zeroRecords":	"Gan aon taifead meaitseáil aimsithe",
+	"paginate": {
+		"first":	"An Chéad",
+		"previous":	"Roimhe Seo",
+		"next":		"Ar Aghaidh",
+		"last":		"Last"
 	}
 }
