--- a/i18n/datatables/lang-uk_UA.json
+++ b/i18n/datatables/lang-uk_UA.json
@@ -1,16 +1,20 @@
 {
-	"sProcessing":	 "Зачекайте...",
-	"sLengthMenu":	 "Показати _MENU_ записів",
-	"sZeroRecords":	 "Записи відсутні.",
-	"sInfo":		 "Записи з _START_ по _END_ із _TOTAL_ записів",
-	"sInfoEmpty":	 "Записи з 0 по 0 із 0 записів",
-	"sInfoFiltered": "(відфільтровано з _MAX_ записів)",
-	"sInfoPostFix":	 "",
-	"sSearch":		 "Пошук:",
-	"oPaginate": {
-		"sFirst": "Перша",
-		"sPrevious": "Попередня",
-		"sNext": "Наступна",
-		"sLast": "Остання"
+	"info":			"Записи з _START_ по _END_ із _TOTAL_ записів",
+	"infoEmpty":	"Записи з 0 по 0 із 0 записів",
+	"infoFiltered":	"(відфільтровано з _MAX_ записів)",
+	"infoPostFix":	"",
+	"lengthMenu":	"Показати _MENU_ записів",
+	"processing":	"Зачекайте...",
+	"search":		"Пошук:",
+	"zeroRecords":	"Записи відсутні.",
+	"paginate": {
+		"first":	"Перша",
+		"previous":	"Попередня",
+		"next":		"Наступна",
+		"last":		"Остання"
+	},
+	"aria": {
+		"sortAscending":	": активувати для сортування стовпців за зростанням",
+		"sortDescending":	": активувати для сортування стовпців за спаданням"
 	}
 }
