Translations: Rename locale abbreviations for Ukrainian (from uk_UA to uk), Latvian (lv_LV to lv), Belarussian (be_BY to bel), and Irish (ga_IR to ga), according to the locales as they are used in WordPress, see http://wpcentral.io/internationalization/.

--- a/i18n/tablepress-uk.po
+++ b/i18n/tablepress-uk.po
@@ -14,7 +14,7 @@ msgstr ""
 "X-Generator: Poedit 1.6.6\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"Language: uk_UA\n"
+"Language: uk\n"
 
 #: classes/class-admin-page-helper.php:79
 msgid "Thank you for using <a href=\"https://tablepress.org/\">TablePress</a>."
