DataTables: Add/fix "decimal" and "thousands" parameters in the DataTables JSON translation files, which are used for the type detection and sorting by DataTables. Information from http://en.wikipedia.org/wiki/Decimal_mark

--- a/i18n/datatables/lang-az.json
+++ b/i18n/datatables/lang-az.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": sütunu artma sırası üzərə aktiv etmək",
 		"sortDescending":	": sütunu azalma sırası üzərə aktiv etmək"
 	},
-	"thousands":		","
+	"decimal":			",",
+	"thousands":		"."
 }
