--- a/i18n/datatables/lang-bel.json
+++ b/i18n/datatables/lang-bel.json
@@ -16,5 +16,7 @@
 	"aria": {
 		"sortAscending":	": актываваць для сартавання слупка па ўзрастанні",
 		"sortDescending":	": актываваць для сартавання слупка па змяншэнні"
-	}
+	},
+	"decimal":		",",
+	"thousands":	"."
 }
