--- a/i18n/datatables/lang-hu_HU.json
+++ b/i18n/datatables/lang-hu_HU.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": aktiválja a növekvő rendezéshez",
 		"sortDescending":	": aktiválja a csökkenő rendezéshez"
 	},
+	"decimal":			",",
 	"thousands":		" "
 }
