--- a/i18n/datatables/lang-ru_RU.json
+++ b/i18n/datatables/lang-ru_RU.json
@@ -16,5 +16,7 @@
 	"aria": {
 		"sortAscending":	": активировать для сортировки столбца по возрастанию",
 		"sortDescending":	": активировать для сортировки столбцов по убыванию"
-	}
+	},
+	"decimal":		",",
+	"thousands":	"."
 }
