--- a/i18n/datatables/lang-sl_SI.json
+++ b/i18n/datatables/lang-sl_SI.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": vključite za naraščujoči sort",
 		"sortDescending":	": vključite za padajoči sort"
 	},
-	"thousands":		","
+	"decimal":			",",
+	"thousands":		"."
 }
