--- a/i18n/datatables/lang-sq.json
+++ b/i18n/datatables/lang-sq.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": aktivizo për të sortuar kolumnin me vlera në ngritje",
 		"sortDescending":	": aktivizo për të sortuar kolumnin me vlera në zbritje"
 	},
-	"thousands":		","
+	"decimal":			",",
+	"thousands":		"."
 }
