--- a/i18n/datatables/lang-uk.json
+++ b/i18n/datatables/lang-uk.json
@@ -16,5 +16,7 @@
 	"aria": {
 		"sortAscending":	": активувати для сортування стовпців за зростанням",
 		"sortDescending":	": активувати для сортування стовпців за спаданням"
-	}
+	},
+	"decimal":		",",
+	"thousands":	"."
 }
