--- a/i18n/datatables/lang-es_ES.json
+++ b/i18n/datatables/lang-es_ES.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": Activar para ordenar la columna de manera ascendente",
 		"sortDescending":	": Activar para ordenar la columna de manera descendente"
 	},
-	"thousands":	","
+	"decimal":			",",
+	"thousands":		"."
 }
