--- a/i18n/datatables/lang-pl_PL.json
+++ b/i18n/datatables/lang-pl_PL.json
@@ -19,5 +19,6 @@
 		"sortAscending":	": aktywuj, by posortować kolumnę rosnąco",
 		"sortDescending":	": aktywuj, by posortować kolumnę malejąco"
 	},
+	"decimal":			",",
 	"thousands":		" "
 }
