--- a/i18n/tablepress-he_IL.po
+++ b/i18n/tablepress-he_IL.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress v0.8.1-beta\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: TablePress v1.5\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: 2013-07-09 19:05+0200\n"
 "PO-Revision-Date: 2013-07-10 05:49+0200\n"
 "Last-Translator: מולי באהר <mulli@site2goal.co.il>\n"
