--- a/i18n/tablepress-is_IS.po
+++ b/i18n/tablepress-is_IS.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress v1.0\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: TablePress v1.5\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2013-05-15 22:31:46+0000\n"
 "Last-Translator: nethar <nethar@nethar.is>\n"
