--- a/i18n/tablepress-pt_BR.po
+++ b/i18n/tablepress-pt_BR.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress v1.1.1\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: TablePress v1.5\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2013-10-09 01:19:13+0000\n"
 "Last-Translator: Renato Rodrigues <renato@rlsrodrigues.com.br>\n"
