--- a/i18n/tablepress-es_ES.po
+++ b/i18n/tablepress-es_ES.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress v1.3\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: TablePress v1.5\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2014-02-22 19:12:29+0000\n"
 "Last-Translator: Darío Hereñú <magallania@gmail.com>\n"
