--- a/i18n/tablepress-fi.po
+++ b/i18n/tablepress-fi.po
@@ -1,8 +1,8 @@
-# Copyright (C) 2013 TablePress
+# Copyright (C) 2014 TablePress
 # This file is distributed under the same license as the TablePress package.
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress 1.0\n"
+"Project-Id-Version: TablePress v1.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: 2013-04-15 18:25:34+00:00\n"
 "MIME-Version: 1.0\n"
