--- a/i18n/tablepress-tr_TR.po
+++ b/i18n/tablepress-tr_TR.po
@@ -1,8 +1,8 @@
-# Copyright (C) 2013 TablePress
+# Copyright (C) 2014 TablePress
 # This file is distributed under the same license as the TablePress package.
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress 1.1\n"
+"Project-Id-Version: TablePress v1.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: 2013-08-25 16:35:36+00:00\n"
 "PO-Revision-Date: 2013-08-28 03:06+0200\n"
