--- a/i18n/tablepress-uk.po
+++ b/i18n/tablepress-uk.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the TablePress package.
 msgid ""
 msgstr ""
-"Project-Id-Version: TablePress 1.4\n"
+"Project-Id-Version: TablePress v1.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
 "POT-Creation-Date: 2014-04-17 19:31:27+00:00\n"
 "MIME-Version: 1.0\n"
