--- a/i18n/tablepress-uk.po
+++ b/i18n/tablepress-uk.po
@@ -2437,5 +2437,5 @@ msgid "Tobias Bäthge"
 msgstr "Тобіас Бетґе"
 
 #. Author URI of the plugin/theme
-msgid "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
 msgstr ""
