--- a/i18n/tablepress-cs_CZ.po
+++ b/i18n/tablepress-cs_CZ.po
@@ -2681,8 +2681,8 @@ msgstr "Tobias Bäthge"
 # @ tablepress
 #. translators: plugin header field 'AuthorURI'
 #: tablepress.php:0
-msgid "http://tobias.baethge.com/"
-msgstr "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
+msgstr "https://tobias.baethge.com/"
 
 # @ tablepress
 #: views/view-add.php:72
