--- a/i18n/tablepress-nl_NL.po
+++ b/i18n/tablepress-nl_NL.po
@@ -2953,8 +2953,8 @@ msgstr "Tobias Bäthge"
 
 # @ tablepress
 #. Author URI of the plugin/theme
-msgid "http://tobias.baethge.com/"
-msgstr "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
+msgstr "https://tobias.baethge.com/"
 
 # @ tablepress
 #~ msgid "Because of CSS styling, the table might look different on your page!"
