--- a/i18n/tablepress-pl_PL.po
+++ b/i18n/tablepress-pl_PL.po
@@ -2412,8 +2412,8 @@ msgid "Tobias Bäthge"
 msgstr "Tobias Bäthge"
 
 #. Author URI of the plugin/theme
-msgid "http://tobias.baethge.com/"
-msgstr "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
+msgstr "https://tobias.baethge.com/"
 
 #~ msgid "TablePress Plugin page"
 #~ msgstr "Strona wtyczki TablePress"
