--- a/i18n/tablepress-sr_RS.po
+++ b/i18n/tablepress-sr_RS.po
@@ -2842,5 +2842,5 @@ msgid "Tobias Bäthge"
 msgstr "Tobias Bäthge"
 
 #. Author URI of the plugin/theme
-msgid "http://tobias.baethge.com/"
-msgstr "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
+msgstr "https://tobias.baethge.com/"
