--- a/i18n/tablepress-zh_CN.po
+++ b/i18n/tablepress-zh_CN.po
@@ -2719,5 +2719,5 @@ msgstr "Tobias Bäthge"
 
 # @ tablepress
 #. Author URI of the plugin/theme
-msgid "http://tobias.baethge.com/"
-msgstr "http://tobias.baethge.com/"
+msgid "https://tobias.baethge.com/"
+msgstr "https://tobias.baethge.com/"
