--- a/i18n/tablepress-de_DE.po
+++ b/i18n/tablepress-de_DE.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TablePress v1.6\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/tablepress\n"
-"POT-Creation-Date: 2015-04-25 19:59:31+00:00\n"
-"PO-Revision-Date: 2015-04-25 22:02+0100\n"
+"POT-Creation-Date: 2015-08-19 09:36+0200\n"
+"PO-Revision-Date: 2015-08-19 09:36+0200\n"
 "Last-Translator: Tobias Bäthge <wordpress@tobias.baethge.com>\n"
 "Language-Team: Tobias Bäthge <wordpress@tobias.baethge.com>\n"
 "Language: de_DE\n"
@@ -17,9 +17,9 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
 "_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;"
 "esc_attr_e\n"
-"X-Poedit-Basepath: ../\n"
+"X-Poedit-Basepath: ..\n"
 "X-Textdomain-Support: yes\n"
-"X-Generator: Poedit 1.7.6\n"
+"X-Generator: Poedit 1.8.4\n"
 "X-Poedit-SearchPath-0: .\n"
 
 # @ tablepress
