Mongolian translation file for DataTables: Flip translations for "next" and "previous".

--- a/i18n/datatables/lang-mn.json
+++ b/i18n/datatables/lang-mn.json
@@ -13,8 +13,8 @@
 	"paginate": {
 		"first":		"Эхнийх",
 		"last":			"Сүүлийнх",
-		"next":			"Өмнөх",
-		"previous":		"Дараах"
+		"previous":		"Өмнөх",
+		"next":			"Дараах"
 	},
 	"aria": {
 		"sortAscending":	": цагаан толгойн дарааллаар эрэмбэлэх",
